--- a/Assets/stylesheets/styles.css
+++ b/Assets/stylesheets/styles.css
@@ -327,3 +327,62 @@ Discography
   }
 
   /*
+
+  MEDIA
+
+  */
+
+  .Media-Banner{
+    background: url('../images/Media.Banner.png')
+    no-repeat top center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    }
+
+    .media-list {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+
+    .media-card-wrapper {
+      width: 250px;
+      height: 250px;
+      position: relative;
+      margin-bottom: 25px;
+      text-align: center;
+    }
+
+    .media-card{
+      width: 225px;
+      height: 225px;
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto 25px;
+      border-radius: 8px;
+      overflow: hidden;
+      z-index: 0;
+      transition: all .3s ease-in-out;
+      box-shadow: 0 25px 50px rgba(0, 0, 0, 0);
+    }
+
+    .media-card > img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .media-card:hover {
+      width: 250px;
+      height: 250px;
+      z-index: 10;
+      box-shadow: 0 50px 125px rgba(0, 0, 0, 0.4);
+    }
+
+    .media-list > iframe {
+      margin-bottom: 50px;
+    }
