--- a/Assets/stylesheets/styles.css
+++ b/Assets/stylesheets/styles.css
@@ -86,6 +86,11 @@ nav > a {
   color: #fff;
 }
 
+.active{
+  background-color:#ED2024;
+  color:#F1A63B;
+}
+
 .mobile-menu-icon {
   width: 36px;
   height: 45px;
