--- a/Assets/stylesheets/styles.css
+++ b/Assets/stylesheets/styles.css
@@ -31,11 +31,11 @@ body {
 }
 
 a {
-  color: #F1A63B;
+  color: #ED2024;
 }
 
 a:hover {
-  color: #ED2024;
+  color: #F1A63B;
 
 }
 .header {
@@ -87,8 +87,7 @@ nav > a {
 }
 
 .active{
-  background-color:#ED2024;
-  color:#F1A63B;
+  color:#ED2024;
 }
 
 .mobile-menu-icon {
@@ -189,7 +188,7 @@ section{
 @media (min-width: 720px) and (max-width: 1959px){
   .page-banner{
     height: 450px;
-    margin-top: 2%;
+    margin-top: 3%;
   }
 
 }
@@ -209,13 +208,14 @@ background-size: cover;
 }
 
 .about-image{
-max-width: 20%;
+max-width: 275px;
 float: left;
 padding-right: 10px;
+margin-bottom: 10px;
 }
 
 .about-band{
-max-width: 80%;
+max-width: 95%;
 display: block;
 margin-left: auto;
 margin-right: auto;
@@ -251,7 +251,7 @@ Discography
   }
 
   .Disco-album{
-    max-width: 35%;
+    max-width: 300px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -259,7 +259,7 @@ Discography
     margin-bottom: 50px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 100px){
     .Disco-album{
       position: static;
       top: 0;
@@ -268,7 +268,7 @@ Discography
 
 
     .Disco-album:hover{
-      max-width: 50%;
+      max-width: 450px;
       box-shadow: 0 75px 175px rgba(2, 30, 30, 0);
       border-style:solid;
       border-width: thick;
@@ -282,7 +282,7 @@ Discography
     list-style: none;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 100px){
     ul.logo-evolution-details {
       margin-left: 320px;
     }
@@ -392,3 +392,181 @@ Discography
     .media-list > iframe {
       margin-bottom: 50px;
     }
+
+    /*
+
+    Merch
+
+    */
+
+    .merch-banner{
+      background: url('../images/Merch.Banner.png')
+      no-repeat top center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      }
+
+      ul.merch-controls {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0;
+        list-style: none;
+        border: 3px solid #F1A63B;
+      }
+
+      @media (min-width: 736px){
+        ul.merch-controls {
+          flex-wrap: nowrap;
+        }
+      }
+
+      ul.merch-controls > li {
+        width: 100%;
+        height: auto;
+        flex-grow: 0;
+        overflow: hidden;
+      }
+
+      .merch-ctrl-btn {
+      	height: 4rem;
+        flex-grow: 0;
+      	width: 100%;
+      	line-height: 24px;
+      	font-size: 24px;
+        font-family: Sedgwick Ave Display, Cursive, sans-serif;
+        color: white;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        border: none;
+      	overflow: hidden;
+        background: black;
+        transition: all 0.3s ease-in-out;
+      }
+
+      .merch-ctrl-btn.active {
+        background: #F1A63B;
+        color:#ED2024;
+      }
+
+      .merch-ctrl-btn:hover {
+        cursor: pointer;
+        background: rgba(255,255,255,0.5);
+      }
+
+      .merch-ctrl-btn span {
+      	display: inline-block;
+      	width: 100%;
+      	height: 100%;
+        position: relative;
+      	-webkit-transition: all 0.3s;
+      	-webkit-backface-visibility: hidden;
+      	-moz-transition: all 0.3s;
+      	-moz-backface-visibility: hidden;
+      	transition: all 0.3s;
+      	backface-visibility: hidden;
+      }
+
+      .merch-ctrl-btn img {
+        width: 75%;
+        height: 75%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        bottom: 100%;
+        transition: all 0.3s ease-in-out;
+      }
+
+      .merch-ctrl-btn:hover span {
+      	-webkit-transform: translateY(300%);
+      	-moz-transform: translateY(300%);
+      	-ms-transform: translateY(300%);
+      	transform: translateY(300%);
+      }
+
+      .merch-ctrl-btn:hover img {
+        bottom: 15%;
+      }
+
+      .filtr-item {
+        width: 100%;
+        top: 0;
+        overflow: hidden;
+        z-index:0;
+        transition: all .3s ease-in-out;
+      }
+
+      .filtr-item > img {
+        width: 250px;
+        height: 190px;
+        margin: auto;
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+      }
+
+      .filtr-item:hover {
+        cursor: pointer;
+        top: .5rem;
+        background: #efefef;
+        z-index:10;
+      }
+
+      .filtr-item:hover > img {
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%);
+        transition: all .3s ease-in-out;
+      }
+
+      .filtr-item.--sold-out:before {
+        content: "Sold Out";
+        width: 20rem;
+        height: 2rem;
+        position: absolute;
+        top: 1.5625rem;
+        right: -105px;
+        padding-top: .25rem;
+        color: #fff;
+        text-align: center;
+        transform: translate(-50%, -25px);
+        z-index: 1;
+        background: rgba(117,0,2, 0.85);
+        -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+        transform: rotate(35deg)
+      }
+
+      .filtr-item.--sold-out:hover{
+        cursor: not-allowed;
+      }
+
+      button:focus {
+        outline: 0;
+      }
+
+      table {
+          border-collapse: collapse;
+          border-spacing: 0;
+          width: 100%;
+          display: table
+      }
+
+      td {
+        text-align: center;
+      }
+
+      .striped-row tbody tr:nth-child(odd) {
+        background-color: #f1f1f1
+      }
+
+      .white {
+          color: #000!important;
+          background-color: #fff!important
+      }
